<resources>
    <string name="app_name">Opengur</string>
    <string name="action_settings">Settings</string>
    <string name="random">Random</string>
    <string name="refresh">Refresh</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_message">Are you sure you want to clear your current image cache?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="tap_to_view">Tap to view</string>
    <string name="share">Share</string>
    <string name="dismiss">Dismiss</string>
    <string name="cant_launch_intent">Your device in unable to handle this link</string>
    <string name="loading_image_error">Unable to load image.</string>
    <string name="moments_ago">Moments Ago</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="user_not_logged_in">You must be logged in to complete this action</string>
    <string name="up_vote">Up Vote</string>
    <string name="down_vote">Down Vote</string>
    <string name="reply">Reply</string>
    <string name="view_user">View Profile</string>
    <string name="accept">Accept</string>
    <string name="sort_by">Sort By</string>
    <string name="developer">Developer</string>
    <string name="version">Version</string>
    <string name="vote_cast">Vote Cast</string>
    <string name="one_moment">One Moment…</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="copy_link">Copy Link</string>
    <string name="open_source">Open Source</string>
    <string name="view_source">View Source Code</string>
    <string name="upload_success">Uploaded to %s</string>
    <string name="upload_complete">Upload Complete</string>
    <string name="view_licenses">View Open Source Licenses</string>
    <string name="retry">Retry</string>
    <string name="gallery">Gallery</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="search">Search</string>
    <string name="section">Section</string>
    <string name="date_range">Date Range</string>
    <string name="options">Options</string>
    <string name="login_msg">Tap to login</string>
    <string name="dont_ask_again">Don\'t ask me again.</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="exit_confirm">Are you sure you want to exit?</string>
    <string name="link_copied">Link copied</string>
    <string name="link_copy_failed">Unable to copy link</string>
    <string name="caution">Caution</string>
    <string name="okay">Okay</string>
    <string name="copy_album_link">Copy Album Link</string>
    <string name="add">Add</string>
    <string name="undo">Undo</string>
    <string name="notifications">Notifications</string>
    <string name="delete">Delete</string>
    <string name="hide_comment_bar">Hide bottom bar</string>
    <string name="download_album">Download Album</string>
    <string name="error_generic">An unexpected error has occurred. Please try again.</string>
    <string name="error_401">This requires you to be logged in. Please login and try again.</string>
    <string name="error_403">You do not have permission to complete this action. You might need to login again.</string>
    <string name="error_429">The rate limit for Opengur has been hit. There is nothing that can done about this. Check back
    later.</string>
    <string name="error_503">Imgur is currently over capacity. Boo…</string>
    <string name="error_network">Unable to connect to Imgur. Check your connection and try again.</string>
    <string name="download_error">An error occurred while downloading</string>
    <string name="error">Error</string>
    <string name="upload_camera_error">An error occurred while capturing your photo. Please try again</string>
    <string name="notoriety_forever_alone">Forever Alone</string>
    <string name="notoriety_neutral">Neutral</string>
    <string name="notoriety_liked">Liked</string>
    <string name="notoriety_accepted">Accepted</string>
    <string name="notoriety_glorious">Glorious</string>
    <string name="notoriety_renowned">Renowned</string>
    <string name="notoriety_idolized">Idolized</string>
    <string name="notoriety_trusted">Trusted</string>
    <string name="filter">Filter</string>
    <string name="filter_popular">Popularity</string>
    <string name="filter_time">Newest</string>
    <string name="filter_rising">Rising</string>
    <string name="filter_top">Top</string>
    <string name="filter_highest_scoring">Highest Scoring</string>
    <string name="filter_viral">Most Viral</string>
    <string name="filter_user_sub">User Submitted</string>
    <string name="reddit_top_filter_day">Day</string>
    <string name="reddit_top_filter_week">Week</string>
    <string name="reddit_top_filter_month">Month</string>
    <string name="reddit_top_filter_year">Year</string>
    <string name="reddit_top_filter_all">All</string>
    <string name="filter_show_viral">Show Viral</string>
    <string name="gallery_filter">Gallery Filter</string>
    <string name="reddit_filter">Subreddit Filter</string>
    <string name="topics_filter">Topics Filter</string>
    <string name="sort_new">New</string>
    <string name="sort_best">Best</string>
    <string name="sort_top">Top</string>
    <string name="uploaded_photos_empty">You have not uploaded any photos from this device</string>
    <string name="uploaded_photos_title">Uploads</string>
    <string name="uploaded_remove_photo_message">Are you sure you want to remove this photo?</string>
    <string name="uploaded_remove_album_message">Are you sure you want to remove this Album?</string>
    <string name="uploaded_remove_imgur">Remove from Imgur</string>
    <string name="convo_message_hint">Enter a message</string>
    <string name="convo_check_for_messages">Check for messages</string>
    <string name="convo_block">Block</string>
    <string name="convo_report">Report</string>
    <string name="convo_message_sending">Sending&#8230;</string>
    <string name="convo_message_failed">Unable to deliver message</string>
    <string name="convo_delete">Delete Conversation </string>
    <string name="convo_delete_message">Are you sure you want to delete this conversation?</string>
    <string name="convo_report_title">Report %s</string>
    <string name="convo_block_title">Block %s</string>
    <string name="convo_report_message">Are you sure you want to report %s?</string>
    <string name="convo_block_message">Are you sure you want to block %s?</string>
    <string name="convo_user_reported">%s has been reported</string>
    <string name="profile_no_uploads">You haven\'t uploaded any images</string>
    <string name="profile_delete_image">Are you sure you want to delete this image?</string>
    <string name="profile_delete_album">Are you sure you want to delete this album?</string>
    <string name="profile_delete_success_image">Image deleted</string>
    <string name="profile_delete_success_album">Album deleted</string>
    <string name="profile_send_message">Send Message</string>
    <string name="profile_rep">%d Reputation</string>
    <string name="profile_date">Since %s</string>
    <string name="profile_bio_empty">%s does not have a bio.</string>
    <string name="profile_no_favorites">%s has no favorite galleries</string>
    <string name="profile_no_submissions">%s has not shared any images with Imgur</string>
    <string name="profile_no_comments">%s has not posted any comments to Imgur</string>
    <string name="profile_no_convos">You do not have any active conversations</string>
    <string name="profile_no_albums">%s has not created any albums</string>
    <string name="profile_unfavorite_title">Remove Favorite</string>
    <string name="profile_unfavorite_message">Are you sure you want to remove this from your favorites?</string>
    <string name="pref_cache_title">Cache</string>
    <string name="pref_current_cache_size">Current Cache Size</string>
    <string name="pref_comment_title">Comments</string>
    <string name="pref_comments_on">Display Comments</string>
    <string name="pref_comments_off">Don\'t Display Comments</string>
    <string name="pref_category_title">Theme</string>
    <string name="pref_theme_title">App Color Theme</string>
    <string name="pref_adb_title">ADB Logs</string>
    <string name="pref_adb_disabled">ADB Logs disabled</string>
    <string name="pref_adb_enabled">ADB Logs enabled</string>
    <string name="pref_cache_loc_title">Cache Location</string>
    <string name="pref_cache_size_title">Maximum Cache Size</string>
    <string name="pref_nsfw_title">NSFW Images</string>
    <string name="pref_nsfw_on">Allow NSFW images</string>
    <string name="pref_nsfw_off">Don\'t allow NSFW images</string>
    <string name="pref_nsfw_thumb_title">NSFW Thumbnail</string>
    <string name="pref_nsfw_thumb_on">Allow NSFW thumbnails</string>
    <string name="pref_nsfw_thumb_off">Don\'t allow NSFW thumbnails</string>
    <string name="pref_crashlytics_title">Anonymous Usage Statistics</string>
    <string name="pref_crashlytics_on">Anonymous usage statistics will be reported</string>
    <string name="pref_crashlytics_off">Anonymous usage statistics will not be reported</string>
    <string name="pref_dark_theme_title">Dark Theme</string>
    <string name="pref_dark_theme_on">Use dark theme</string>
    <string name="pref_dark_theme_off">Do not use dark theme</string>
    <string name="pref_reddit_title">Subreddit search history</string>
    <string name="pref_reddit_desc">Clear subreddit search history</string>
    <string name="pref_reddit_deleted">Subreddit history cleared</string>
    <string name="pref_subreddit_clear_desc">Clear my subreddits</string>
    <string name="pref_exit_title">Confirm App Exit</string>
    <string name="pref_exit_on">Prompt me before exiting Opengur</string>
    <string name="pref_exit_off">Do not prompt me when exiting Opengur</string>
    <string name="pref_search_title">Gallery Search History</string>
    <string name="pref_search_desc">Clear Gallery Search History</string>
    <string name="pref_search_deleted">Gallery search history cleared</string>
    <string name="pref_tags_title">Tags</string>
    <string name="pref_tags_on">Display Tags</string>
    <string name="pref_tags_off">Don\'t Display Tags</string>
    <string name="pref_thumbnail_quality">Thumbnail Quality</string>
    <string name="copy_comment">Copy Comment</string>
    <string name="upload_enter_link">Enter Link</string>
    <string name="upload_checking_link">Checking link&#8230;</string>
    <string name="upload_link_dialog_title">Photo Link</string>
    <string name="upload_edit_title_hint">Enter title</string>
    <string name="upload_edit_desc_hint">Enter description</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_topics">Topics</string>
    <string name="nav_meme">Meme Generator</string>
    <string name="nav_reddit">Subreddit</string>
    <string name="nav_random">Random</string>
    <string name="nav_uploads">Uploads</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_beta">Beta</string>
    <string name="nav_feedback">Feedback</string>
    <string name="muzei_update_interval">Update Interval</string>
    <string name="muzei_wifi_only">Refresh only on Wi-Fi</string>
    <string name="muzei_wifi_on">Only refresh when connected to Wi-Fi</string>
    <string name="muzei_wifi_off">Refresh regardless of network</string>
    <string name="muzei_source">Image Source</string>
    <string name="muzei_topic">Topic</string>
    <string name="view_reddit">View on Reddit</string>
    <string name="subreddit">Subreddit</string>
</resources>