<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="muzeiWifi"
        android:summaryOff="@string/muzei_wifi_off"
        android:summaryOn="@string/muzei_wifi_on"
        android:title="@string/muzei_wifi_only" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="muzeiNSFW"
        android:summaryOff="@string/pref_nsfw_off"
        android:summaryOn="@string/pref_nsfw_on"
        android:title="@string/pref_nsfw_title" />

    <ListPreference
        android:defaultValue="3"
        android:entries="@array/muzei_update"
        android:entryValues="@array/muzei_update_keys"
        android:key="muzeiUpdate"
        android:title="@string/muzei_update_interval" />

    <ListPreference
        android:defaultValue="viral"
        android:entries="@array/muzei_sources"
        android:entryValues="@array/muzei_sources_keys"
        android:key="muzeiSource"
        android:title="@string/muzei_source" />

    <EditTextPreference
        android:title="@string/subreddit"
        android:key="muzeiInput"
        android:defaultValue="aww" />

    <ListPreference
        android:title="@string/muzei_topic"
        android:key="muzeiTopic" />

</PreferenceScreen>