<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/upVote"
        android:icon="@drawable/ic_action_upvote_48dp"
        android:title="@string/up_vote" />

    <item
        android:id="@+id/downVote"
        android:icon="@drawable/ic_action_downvote_48dp"
        android:title="@string/down_vote" />

    <item
        android:id="@+id/reply"
        android:icon="@drawable/ic_action_comment_48dp"
        android:title="@string/reply" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person_48dp"
        android:title="@string/view_user" />

    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_action_copy_48dp"
        android:title="@string/copy_comment" />

    <item
        android:id="@+id/cancel"
        android:icon="@drawable/ic_action_close_48dp"
        android:title="@string/cancel" />

</menu>