<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_action_user"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/reddit"
        android:icon="@drawable/ic_action_reddit"
        android:title="@string/view_reddit"
        app:showAsAction="ifRoom" />

</menu>