<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dateRangeContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/date_range" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/reddit_top_filter_day"
            android:textColor="@android:color/black"
            android:gravity="center" />

        <TextView
            android:id="@+id/week"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/reddit_top_filter_week"
            android:textColor="@android:color/black"
            android:gravity="center" />

        <TextView
            android:id="@+id/month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/reddit_top_filter_month"
            android:textColor="@android:color/black"
            android:gravity="center" />

        <TextView
            android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/reddit_top_filter_year"
            android:textColor="@android:color/black"
            android:gravity="center" />

        <TextView
            android:id="@+id/all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:text="@string/reddit_top_filter_all"
            android:textColor="@android:color/black"
            android:gravity="center" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/dateSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="80"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin" />

</LinearLayout>