<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_with_section_height"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/color_primary"
            android:gravity="bottom"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:navigationIcon="@drawable/abc_ic_ab_back_mtrl_am_alpha">

            <com.kenny.openimgur.ui.TextViewRoboto
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@android:color/white"
                android:text="@string/reddit_filter"
                android:paddingRight="@dimen/content_padding"
                android:paddingBottom="@dimen/content_padding"
                app:robotoFont="regular" />

        </android.support.v7.widget.Toolbar>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/sort_by"
            android:textColor="@color/color_primary_dark"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="8dp" />

        <RadioGroup
            android:id="@+id/sortRG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <RadioButton
                android:id="@+id/newestRB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/filter_time"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/topRB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/filter_top"
                android:layout_weight="1" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/dateRangeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:text="@string/date_range"
                android:textColor="@color/color_primary_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/reddit_top_filter_day"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/week"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/reddit_top_filter_week"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/reddit_top_filter_month"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/reddit_top_filter_year"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/all"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:text="@string/reddit_top_filter_all"
                    android:gravity="center" />

            </LinearLayout>

            <SeekBar
                android:id="@+id/dateSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="80"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_content_margin"
            android:layout_marginBottom="@dimen/dialog_button_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAllCaps="true"
                style="@style/Widget.AppCompat.ActionButton" />

            <Button
                android:id="@+id/positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:textAllCaps="true"
                android:textColor="@color/dialog_accept"
                style="@style/Widget.AppCompat.ActionButton" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>